compiler/test/parse-err/literal-bool-from-int.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func LiteralBoolFromInt() -> bool {
    // expected-error@below{{expected 'true' or 'false'}}
    return bool(42);
}
